[gd_scene load_steps=4 format=3 uid="uid://rgwrlbu7yt2t"]

[ext_resource type="Script" path="res://LevelDesigner/LevelDesignerMenu.gd" id="1_yqefu"]
[ext_resource type="Texture2D" uid="uid://bqhr0nqy8osli" path="res://assets/backgrounds/background.png" id="2_qxisd"]
[ext_resource type="Theme" uid="uid://ckiied77ueyj" path="res://candlelight_theme.tres" id="3_pd0m8"]

[node name="PuzzleGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqefu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -48.0
offset_right = 571.0
offset_bottom = 564.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qxisd")
metadata/_edit_lock_ = true

[node name="LevelsPositioningContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="LevelsPositioningContainer"]
custom_minimum_size = Vector2(400, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="LevelsPositioningContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_pd0m8")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 32
text = "Levels
"
horizontal_alignment = 1

[node name="LevelButtonsContainer" type="VBoxContainer" parent="LevelsPositioningContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NewLevelButton" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 32.0
offset_right = 229.0
offset_bottom = 73.0
theme = ExtResource("3_pd0m8")
text = "New Level"

[connection signal="pressed" from="NewLevelButton" to="." method="_on_new_level_button_pressed"]
